# frank_scanlation

./: .gitignore  Cargo.toml  README.md
.github/workflows/: aur-publish.yml  release.yml
core/: Cargo.toml
core/examples/: probe.rs
core/src/: db.rs  extract.rs  fetch.rs  heuristics.rs  lib.rs
desktop/: package.json
desktop/src-tauri/: .gitignore  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/injected/: reader.js
desktop/src-tauri/injected/tests/: reader.test.mjs
desktop/src-tauri/src/: lib.rs  render_env.rs
desktop/src/lib/: mobile-guards.test.ts
desktop/src/routes/: +page.svelte
releases/: v0.1.0.md  v0.3.0.md
