[package]
name = "scanlation-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Site-agnostic scanlation library: chapter heuristics, page extraction, reading-state DB"

[dependencies]
rusqlite = { workspace = true }
scraper = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
